# EF-backend

./: .gitignore  Cargo.toml  README  README.md  diesel.toml
.github/workflows/: main.yml  rust.yml
api/caches/: Cargo.toml
api/caches/src/: access_refresh_tokens.rs  errors.rs  lib.rs  redis.rs  token_buckets.rs
api/configs/: Cargo.toml
api/configs/src/: config.rs  lib.rs  parse.rs
api/db/: Cargo.toml
api/db/migrations/2023-12-15-215619_add_users/: up.sql
api/db/src/: connection.rs  lib.rs  repository.rs  schema.rs  update.rs
api/db/src/models/: user.rs
api/db/src/repositories/: users_repository.rs
api/errors/: Cargo.toml
api/errors/src/: lib.rs
api/extractors/: Cargo.toml
api/extractors/src/: session.rs
api/handlers/: Cargo.toml
api/handlers/src/: auth.rs  health.rs  lib.rs  oauth.rs  secure.rs  user.rs  users.rs
api/handlers/src/helpers/: tokens.rs
api/handlers/tests/: auth.rs  health.rs  secure.rs  users.rs
api/handlers/tests/common/: mod.rs
api/jobs/: Cargo.toml  README.md
api/jobs/src/: lib.rs
api/lib/: Cargo.toml
api/lib/src/: handlers.rs  lib.rs
api/lib/src/handlers/: auth.rs  health.rs  secure.rs
api/lib/src/repositories/: users_repository.rs
api/lib/tests/: auth.rs  health.rs
api/main/: Cargo.toml
api/main/src/: main.rs  routes.rs
api/middlewares/: Cargo.toml
api/middlewares/src/: example.rs  lib.rs  rate_limiter.rs  redis_session_middleware.rs
api/middlewares/src/helpers/: extract.rs
api/model-traits/: Cargo.toml
api/model-traits/src/: update.rs
api/proc-macros/: Cargo.toml  README.md
api/proc-macros/src/: lib.rs  main.rs
api/proc-macros/src/internal/: mod.rs
api/procs/: Cargo.toml
api/procs/src/: lib.rs  main.rs
api/services/: Cargo.toml
api/services/src/: auth.rs  lib.rs  oauth.rs  redis.rs  users.rs
api/services/src/auth/: claims.rs  errors.rs  helpers.rs  middleware.rs  services.rs  types.rs
api/services/src/redis/: errors.rs  models.rs  services.rs
api/types/: Cargo.toml
api/types/src/: user.rs
bootstrap/: Cargo.toml
bootstrap/src/: main.rs  routes.rs
migrations/2023-12-15-215619_add_users/: up.sql
scripts/: drop_db.sql  env.sh  seed_test_db.sh  start_migrations_for_test_db.sh
scripts/seeders/: seed.sql
shared/: Cargo.toml
shared/src/: config.rs  db.rs  errors.rs  extractors.rs  lib.rs  parse.rs  types.rs
shared/src/auth/: claims.rs  errors.rs  middleware.rs
shared/src/db/: connection.rs
shared/src/extractors/: user_extractor.rs
shared/src/types/: user.rs
src/: auth.rs  config.rs  db.rs  errors.rs  extractors.rs  handlers.rs  helpers.rs  main.rs  middleware.rs  models.rs  routes.rs  schema.rs  types.rs
src/auth/: claims.rs  middleware.rs  services.rs
src/db/: connection.rs  repositories.rs  schema.rs
src/db/repositories/: repository.rs  users.rs  users_repository.rs
src/extractors/: user_extractor.rs
src/handlers/: auth.rs  auth_handlers.rs  health_handlers.rs  secure_handlers.rs
src/models/: user.rs
src/types/: roles.rs  user.rs
tests/load_tests/: locustfile.py
tests/load_tests/helpers/: data_helpers.py
tests/load_tests/scenarios/: authentification.py  exceeded_rate_limit.py  users.py
