# [package]
# name = "backend"
# version = "0.1.0"
# edition = "2021"

[workspace]
members = [ "api/configs",
    "api/db", "api/errors", "api/extractors",
    "api/handlers",
    "api/middlewares",
    "api/services", "api/types",
    "bootstrap"
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
