# [package]
# name = "backend"
# version = "0.1.0"
# edition = "2021"

[workspace]
members = [
    "api/caches",
    "api/configs",
    "api/db",
    "api/errors",
    "api/extractors",
    "api/handlers", "api/jobs",
    "api/middlewares",
    "api/services",
    "api/types",
    "bootstrap",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
uuid = { version = "1.10.0", features = [
    "v4",
    "fast-rng",
    "serde",
    "macro-diagnostics",
] }
once_cell = "1.19.0"
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = "1.0.193"
diesel = { version = "2.1.4", features = [
    "postgres",
    "chrono",
    "r2d2",
    "uuid",
] }
r2d2 = "0.8.10"
validator = { version = "0.16", features = ["derive"] }
dotenv = "0.15.0"
oauth2 = "4.4.2"
actix-rt = "2.9.0"
rand = "0.8.5"
futures-util = "0.3.30"
async-trait = "0.1.77"
serde_json = "1.0.117"
actix-web-httpauth = "0.8.1"
reqwest = { version = "0.12.8", features = ["json"] }
