[package]
name = "api-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
oauth2 = "4.4.2"
actix-cors = "0.7.0"
env_logger = "0.11.3"

api-handlers = { path = "../api/handlers" }
api-services = { path = "../api/services" }
api-errors = { path = "../api/errors" }
api-db = { path = "../api/db" }
api-configs = { path = "../api/configs" }
api-caches = { path = "../api/caches" }
api-jobs = { path = "../api/jobs" }
api-middlewares = { path = "../api/middlewares" }
