[package]
name = "api-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["postgres", "chrono", "r2d2"] }
async-trait = "0.1.77"
chrono = { version = "0.4.31", features = ["serde"] }
serde = "1.0.193"
actix-rt = "2.9.0"
once_cell = "1.19.0"

api-types = { path = "../types" }
api-errors = { path = "../errors"}
api-configs = { path = "../configs" }
