[package]
name = "api-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
actix-rt = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }

api-types = { path = "../types" }
api-errors = { path = "../errors" }
api-configs = { path = "../configs" }
