[package]
name = "api-middlewares"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
futures-util = "0.3.30"
actix-web-httpauth = "0.8.1"

api-services = { path = "../services" }
futures-core = "0.3.30"
serde_json = "1.0.117"
