[package]
name = "api-middlewares"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
futures-util = { workspace = true }
actix-web-httpauth = { workspace = true }
futures-core = "0.3.30"
serde_json = { workspace = true }

api-services = { path = "../services" }
api-caches = { path = "../caches" }
api-errors = { path = "../errors" }
