[package]
name = "api-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
r2d2 = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
time = "0.3.31"
jsonwebtoken = "9.2.0"
argon2 = "0.5.3"
actix-web-httpauth = { workspace = true }
validator = { workspace = true }
once_cell = { workspace = true }
actix-rt = { workspace = true }
rand = { workspace = true }
oauth2 = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }

api-db = { path = "../db" }
api-errors = { path = "../errors" }
api-configs = { path = "../configs" }
api-types = { path = "../types" }
api-caches = { path = "../caches" }

[dependencies.redis]
version = "*"
features = ["aio", "tokio-comp"]
