[package]
name = "api-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
